--- a/project/templates/input.html
+++ b/project/templates/input.html
@@ -1,12 +1,22 @@
 {% extends "base.html" %}{% block content %}
 
 <form action = '' method="post">
+  <div class="form-group">
+    <label for="curr_location">Current Location</label><br>
+    <input type="text" class="form-control" id="curr_location" name="curr_location_input">
+    <small id="location_help" class="form-text text-muted">You may enter an address or relative location.</small></div><br>
   <div>
-    <label for="location">Current Location</label><br>
-    <input type="text" id="curr_location" name="curr_location_input"></div>
+    <select class="custom-select custom-select-lg mb-3" name="drop_down">
+      <option selected>Direction of travel</option>
+      <option value="North">North</option>
+      <option value="South">South</option>
+    </select>
+  </div><br>
+    <label for="radius">Radius</label>
+    <input type="number" step="0.25" id="radius" name="radius_input" min=".25" max="5"></div>
   <div>
-    <label for="radius">Radius</label><br>
-    <input type="number" id="radius" name="radius_input" min=".25" max="5"></div>
+    <button type="submit" value="SUBMIT">Find Stations!</button>
+  </div>
 </form>
 
 {% endblock %}
