--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -1,15 +1,16 @@
 <!-- Base template -->
 
 <!DOCTYPE html>
-<html>
-    <head><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+<html class="p-3 mb-2 bg-secondary text-white">
+    <head class="p-3 mb-2 bg-secondary text-white"><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   </head>
 </head>
     <body>
-        <h1>LinkRight</h1>
+    <div></div>
+        <h1 class="display-1 p-3 mb-2 bg-secondary text-info" >LinkRight</h1>
     {% block content %}{% endblock %}
-        <br>
-    <footer>Data from <a href="https://onebusaway.org/">OneBusAway</a> and <a href="https://www.geoapify.com/">Geoapify</a></footer>
+        <br><br><br><br>
+    <footer class="p-3 mb-2 bg-secondary text-white">Data from <a href="https://onebusaway.org/" class="link-info">OneBusAway</a> and <a href="https://www.geoapify.com/" class="link-info">Geoapify</a></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     </body>
 </html>
